# TritonCBE

./: README.md
DigiGPU/: CMakeLists.txt
DigiGPU/src/: DigiGPU.cu  DigiGPU_utils.cc  DigiGPU_utils.h
Facile/facile_tf_nov2/1/model.savedmodel/: keras_metadata.pb  saved_model.pb
Facile/facile_tf_nov2/1/model.savedmodel/variables/: variables.data-00000-of-00001
TestDigiGPU/: digigpu_test.py
TestDigiGPU/DigiGPU/: config.pbtxt
TestIdentity/: README.md  identity_test.py  setup.sh
TestIdentity/facile_tf_nov2/: config.pbtxt
TestIdentity/facile_tf_nov2/1/model.savedmodel/variables/: variables.index
TestIdentity/identity_fp32/: config.pbtxt
TestP2r/: p2r_test.py
TestP2r/p2r/: config.pbtxt
p2rCBE/: CMakeLists.txt
p2rCBE/cmake/: TritonP2rBackendConfig.cmake.in
p2rCBE/src/: p2r.cu
